--- a/waterfall/index.html
+++ b/waterfall/index.html
@@ -9,6 +9,7 @@
                 column-gap: 22px;
                 max-width: 1500px;
                 column-count: 4;
+                margin: auto;
             }
 
             @media only screen and (max-width: 1904px) {
@@ -43,6 +44,11 @@
         </style>
     </head>
     <body>
+        <h1>自适应瀑布流</h1>
+        <pre>纯css单层div实现自适应瀑布流
+https://www.52pojie.cn/thread-1667729-1-1.html
+(出处: 吾爱破解论坛)</pre>
+        <hr>
         <div class="item">
             <div class="item__content">1</div>
             <div class="item__content">2</div>
